Correction du bug du menu de navigation mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,12 +47,8 @@ body {
 }
 
 
-.show_menu {
-  @apply block;
-  /* animation: come 1s linear ease-in-out; */
-  transition: all 1s ease-in;
-}
-
-.hide_menu {
-  display: none !important;
+.container {
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
